Atualizei a página de início e crieu a tabela na página de produção

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <nav>
         <ul>
           <li><a href="index.html">Início</a></li>
-          <li><a href="producao.html">Produção</a>
+          <li><a href="producao.html">Produção</a></li>
+          <li><a href="https://www.google.com.br/maps/@-19.8057257,-40.6595216,272m/data=!3m1!1e3!5m1!1e4?entry=ttu"
+              target="_blank" class="linkMapa">
+              <div class="circulo"><img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></div>
+            </a></li>
         </ul>
       </nav>
     </div>
@@ -29,10 +33,11 @@
   <main>
     <!------------------------------------------página inicial------------------------------------------------------->
 
-    <section  id="conteudo-1" class="conteudo">
+    <section id="conteudo-1" class="conteudo">
       <section class="imagem-principal">
-        <img class="imagem-graos" src="./Imagens-Home/folhas.png" alt="Banner da página inicial">
-        <h2 class="titulo-principal">Fazenda Recanto Grande</h2>
+        <img class="imagem-folhas" src="./Imagens-Home/folhas.png" alt="Banner da página inicial">
+        <h1 class="titulo-principal">Fazenda Recanto Grande</h1>
+        <h2 class="titulo-secundario">Qualidade você encontra aqui!</h2>
 
         <div id="cookie-message" class="cookie-message">
           <p>Este site utiliza cookies. Ao continuar a navegação, você concorda com o uso de cookies 🍪</p>
@@ -42,26 +47,86 @@
       </section>
 
       <section class="principal">
+
+        <h3 class="titulo">Seja bem-vindo à nossa fazenda</h3>
+
+        <p id="frasePrincipal">Somos especialistas na produção e cultivo de cafés de alta qualidade. Com anos de
+          experiência e dedicação garantimos a excelência em cada grão que chega à sua xícara. Nosso objetivo é
+          cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
+
+
         <img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial">
 
         <div class="texto">
-          <h1>Sobre Nós</h1>
-        <p>A Fazenda Recanto Grande é uma renomada fazenda de café, líder no mercado desde 2014. Está localizada no
-          Espírito Santo, Coração da produção cafeeira do Brasil. </p>
+          <h3 class="titulo">Quem somos</h3>
+          <p>A Fazenda Recanto Grande é uma renomada fazenda de café, líder no mercado desde 2014. Está localizada no
+            Espírito Santo, Coração da produção cafeeira do Brasil. </p>
 
-        <p>Nosso compromisso é oferecer uma experiência excepcional aos clientes, com um serviço atencioso,
-          personalizado
-          e de alta qualidade.</p>
+          <p>Nosso compromisso é oferecer uma experiência excepcional aos clientes, com um serviço atencioso,
+            personalizado
+            e de alta qualidade.</p>
 
-        <p>Nossas práticas agrícolas são projetadas para minimizar o impacto ambiental e promover a conservação da
-          biodiversidade.</p>
+          <p>Nossas práticas agrícolas são projetadas para minimizar o impacto ambiental e promover a conservação da
+            biodiversidade.</p>
 
-        <p>Promovemos relações transparentes, respeito mútuo e oferecemos oportunidades de crescimento e desenvolvimento
-          para nossa equipe.</p>
+          <p>Promovemos relações transparentes, respeito mútuo e oferecemos oportunidades de crescimento e
+            desenvolvimento
+            para nossa equipe.</p>
         </div>
       </section>
 
+      <section>
+        <h1 class="titulo">Nossos grãos:</h1>
+
+        <div class="tipo-graos">
+          <h3 class="animacao-letras">
+            <div class="letra">a</div>
+            <div class="letra">r</div>
+            <div class="letra">á</div>
+            <div class="letra">b</div>
+            <div class="letra">i</div>
+            <div class="letra">c</div>
+            <div class="letra">a</div>
+          </h3>
+          <div class="imagem-texto">
+            <img class="imagem-graos" src="./Imagens-Home/cafe-arabica.jpg">
+            <div class="texto-graos">
+              <p>Os “melhores” grãos de café são do tipo Arábica, por isso que todo grão considerado especial ou gourmet
+                deve ser 100% Arábica, pois suas variedades e subvariedades trazem aroma e doçura intensos, cheios de
+                variações em acidez, corpo e sabor, dependendo da mistura.</p>
+              <p>Além disso, o café Arábica tem 50% menos cafeína que o café Robusta. Portanto, o tipo de grão é
+                essencial para definir a qualidade do café e agradar aos diferentes paladares.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="tipo-graos">
+          <h3 class="animacao-letras">
+            <div class="letra">c</div>
+            <div class="letra">o</div>
+            <div class="letra">n</div>
+            <div class="letra">i</div>
+            <div class="letra">l</div>
+            <div class="letra">o</div>
+            <div class="letra">n</div>
+          </h3>
+          <div class="imagem-texto">
+            <img class="imagem-graos" src="./Imagens-Home/cafe-conilon.jpg">
+            <div class="texto-graos">
+              <p>O café Robusta também conhecido como conilon é um tipo de café conhecido por suas características
+                rústicas e forte concentração de cafeína nos grãos.Bem como o café Robusta tem um sabor distinto,
+                rústico e harmônico, e amadurece mais rápido do que outros cafés.</p>
+              <p>Tem também um sabor forte, tornando-o um dos cafés mais produzidos no mundo, e é frequentemente
+                misturado com Arábica para adoçar o sabor.</p>
+            </div>
+          </div>
+        </div>
+
+
+      </section>
+
       <section class="valores">
+        <h3 class="titulo">sobre nós</h3>
         <p><strong>Missão:</strong><br>Nossa Missão é produzir café de qualidade excepcional em todas as etapas do
           processo, desde o cultivo até a xícara final. Buscamos a perfeição em termos de sabor, aroma, corpo e
           complexidade, garantindo uma experiência sensorial única para os amantes de café.</p>
