Houve a criação de uma tabela na página do filtro e foram inseridos comentários nos códigos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="producao.html">Produção</a></li>
           <li><a href="https://www.google.com.br/maps/@-19.8057257,-40.6595216,272m/data=!3m1!1e3!5m1!1e4?entry=ttu"
               target="_blank" class="linkMapa">
-              <div class="circulo"><img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></div>
+              <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa">
             </a></li>
         </ul>
       </nav>
@@ -31,31 +31,31 @@
   </header>
 
   <main>
-    <!------------------------------------------página inicial------------------------------------------------------->
 
-    <section id="conteudo-1" class="conteudo">
+    <!------------------------------------------página inicial------------------------------------------------------->
+    <section>
       <section class="imagem-principal">
         <img class="imagem-folhas" src="./Imagens-Home/folhas.png" alt="Banner da página inicial">
         <h1 class="titulo-principal">Fazenda Recanto Grande</h1>
         <h2 class="titulo-secundario">Qualidade você encontra aqui!</h2>
 
-        <div id="cookie-message" class="cookie-message">
+        <div id="mensagem-cookies" class="mensagem-cookies">
           <p>Este site utiliza cookies. Ao continuar a navegação, você concorda com o uso de cookies 🍪</p>
-          <button id="cookie-accept">Aceitar</button>
-          <button id="cookie-reject">Rejeitar</button>
+          <button id="btAceitar">Aceitar</button>
+          <button id="btRecusar">Recusar</button>
         </div>
       </section>
 
       <section class="principal">
+        <div>
+          <h3 class="titulo">Seja bem-vindo à nossa fazenda</h3>
 
-        <h3 class="titulo">Seja bem-vindo à nossa fazenda</h3>
+          <p id="frasePrincipal">Somos especialistas na produção e cultivo de cafés de alta qualidade. Com anos de
+            experiência e dedicação garantimos a excelência em cada grão que chega à sua xícara. Nosso objetivo é
+            cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
 
-        <p id="frasePrincipal">Somos especialistas na produção e cultivo de cafés de alta qualidade. Com anos de
-          experiência e dedicação garantimos a excelência em cada grão que chega à sua xícara. Nosso objetivo é
-          cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
-
-
-        <img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial">
+          <img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial">
+        </div>
 
         <div class="texto">
           <h3 class="titulo">Quem somos</h3>
@@ -76,6 +76,7 @@
       </section>
 
       <section>
+
         <h1 class="titulo">Nossos grãos:</h1>
 
         <div class="tipo-graos">
@@ -88,6 +89,7 @@
             <div class="letra">c</div>
             <div class="letra">a</div>
           </h3>
+
           <div class="imagem-texto">
             <img class="imagem-graos" src="./Imagens-Home/cafe-arabica.jpg">
             <div class="texto-graos">
@@ -110,6 +112,7 @@
             <div class="letra">o</div>
             <div class="letra">n</div>
           </h3>
+
           <div class="imagem-texto">
             <img class="imagem-graos" src="./Imagens-Home/cafe-conilon.jpg">
             <div class="texto-graos">
@@ -121,8 +124,6 @@
             </div>
           </div>
         </div>
-
-
       </section>
 
       <section class="valores">
@@ -156,7 +157,6 @@
     <img class="logo" src="./Imagens-Geral/logo.png">
     <p class="copyright">Copyright &copy; 2023 Fazenda Recanto Grande</p>
   </footer>
-
 
   <script src="./JavaScript/home.js"></script>
 </body>
