Corrigi o código da tabela

--- a/producao.html
+++ b/producao.html
@@ -62,7 +62,9 @@
                             <h2 id="titulo">Selecione uma <strong>safra</strong> <br>para mais informações!</p>
                         </div>
                         <!--A tabela será criada usando javaScript-->
-                        <table id="tabela"></table>
+                        <table id="tabela">
+                            
+                        </table>
                     </fieldset>
                 </div>
             </section>
@@ -162,6 +164,8 @@
                             <thead id="cabecalhoTabela"></thead>
                             <tbody id="outFiltro"></tbody>
                         </table>
+
+                        <h3 id="outFiltroMensagem" class="paragrafoSaida"></h3>
                 </div>
             </section>
 
