Modifiquei a tabela da página de produção

--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@
         <img class="imagem-folhas" src="./Imagens-Home/folhas.png" alt="Banner da página inicial">
         <h1 class="titulo-principal">Fazenda Recanto Grande</h1>
         <h2 class="titulo-secundario">Qualidade você encontra aqui!</h2>
-
-        <div id="mensagem-cookies" class="mensagem-cookies">
-          <p>Este site utiliza cookies. Ao continuar a navegação, você concorda com o uso de cookies 🍪</p>
-          <button id="btAceitar">Aceitar</button>
-          <button id="btRecusar">Recusar</button>
-        </div>
       </section>
 
       <section class="principal">
@@ -53,9 +47,9 @@
           <p id="frasePrincipal">Somos especialistas na produção e cultivo de cafés de alta qualidade. Com anos de
             experiência e dedicação garantimos a excelência em cada grão que chega à sua xícara. Nosso objetivo é
             cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
-
-          <img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial">
         </div>
+
+        <div><img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial"></div>
 
         <div class="texto">
           <h3 class="titulo">Quem somos</h3>
