Foi adicionado a página de Novidades

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="producao.html">Produção</a></li>
-          <li><a href="https://www.google.com.br/maps/@-19.8057257,-40.6595216,272m/data=!3m1!1e3!5m1!1e4?entry=ttu"
-              target="_blank" class="linkMapa">
+          <li><a href="novidades.html">Novidades</a></li>
+          <li><a
+              href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu"
+              target="_blank">
               <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa">
             </a></li>
         </ul>
@@ -49,7 +51,8 @@
             cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
         </div>
 
-        <div><img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg" alt="Imagem de Fazenda da página inicial"></div>
+        <div><img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg"
+            alt="Imagem de Fazenda da página inicial"></div>
 
         <div class="texto">
           <h3 class="titulo">Quem somos</h3>
@@ -69,7 +72,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="cafes">
 
         <h1 class="titulo">Nossos grãos:</h1>
 
