--- a/producao.html
+++ b/producao.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fazenda Recanto Grande</title>
+    <title>Fazenda Recanto Grande - Gerenciamento das produções</title>
     <link rel="shortcut icon" href="./Imagens-Geral/iconeCampo.png" sizes="32x32" type="image/x-icon">
     <link rel="stylesheet" href="./Stylesheet/reset.css">
-    <link rel="stylesheet" href="./Stylesheet/producao.css">
+    <link rel="stylesheet" href="./Stylesheet/style-producao.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
                         </div>
                         <!--A tabela será criada usando javaScript-->
                         <table id="tabela">
-                            
+
                         </table>
                     </fieldset>
                 </div>
@@ -95,7 +95,8 @@
 
                     <h4>Área com maior produtividade da safra:</h4>
 
-                    <p>Maior produtividade da safra<input type="button" value="Buscar 🔍" id="btMaiorProd" class="button"></p>
+                    <p>Maior produtividade da safra<input type="button" value="Buscar 🔍" id="btMaiorProd"
+                            class="button"></p>
 
                     <h3 id="outMaiorProd" class="paragrafoSaida"></h3>
                 </div>
@@ -109,8 +110,8 @@
 
                     <div class="imagem-producao"><img src="./Imagens-Geral/figura4.png"></div>
 
-                    <label>Buscar áreas com produtividade menores que:<input type="number" placeholder="Buscar áreas"
-                            id="inMedia" required></label>
+                    <label>Buscar áreas com produtividade menores que:<input type="number"
+                            placeholder="Insira uma média" id="inMedia" required></label>
                     <input type="button" value="Buscar 🔍" id="btMostrar" class="button">
                     <h3 id="outMenorMedia" class="paragrafoSaida"></h3>
                 </div>
@@ -124,7 +125,8 @@
                     <div class="imagem-producao"><img src="./Imagens-Geral/figura3.png"></div>
 
                     <h4>Área com menor produtividade da safra:</h4>
-                    <p>Menor produtividade da safra<input type="button" value="Buscar 🔍" id="btMenorProd" class="button"></p>
+                    <p>Menor produtividade da safra<input type="button" value="Buscar 🔍" id="btMenorProd"
+                            class="button"></p>
 
                     <h3 id="outMenorProd" class="paragrafoSaida"></h3>
                 </div>
@@ -160,12 +162,12 @@
 
                     <h2 id="titulo2">Selecione uma <strong>área</strong> <br>para mais informações!</h2>
 
-                        <table class="tabela">
-                            <thead id="cabecalhoTabela"></thead>
-                            <tbody id="outFiltro"></tbody>
-                        </table>
+                    <table class="tabela">
+                        <thead id="cabecalhoTabela"></thead>
+                        <tbody id="outFiltro"></tbody>
+                    </table>
 
-                        <h3 id="outFiltroMensagem" class="paragrafoSaida"></h3>
+                    <h3 id="outFiltroMensagem" class="paragrafoSaida"></h3>
                 </div>
             </section>
 
@@ -178,6 +180,7 @@
     </footer>
 </body>
 
+<script src="./JavaScript/vetores.js"></script>
 <script src="./JavaScript/producao.js"></script>
 <script src="./JavaScript/filtro.js"></script>
 
