Adicionei imagens na página de Novidades

--- a/producao.html
+++ b/producao.html
@@ -61,10 +61,9 @@
                         <div id="divSafra">
                             <h2 id="titulo">Selecione uma <strong>safra</strong> <br>para mais informações!</p>
                         </div>
-                        <!--A tabela será criada usando javaScript-->
-                        <table id="tabela">
 
-                        </table>
+                        <!--A tabela será criada usando javaScript-->
+                        <table id="tabela"></table>
                     </fieldset>
                 </div>
             </section>
