Adicionei algumas imagens na página de Novidades

--- a/producao.html
+++ b/producao.html
@@ -110,7 +110,7 @@
                     <div class="imagem-producao"><img src="./Imagens-Geral/figura4.png"></div>
 
                     <label>Buscar áreas com produtividade menores que:<input type="number"
-                            placeholder="Insira uma média" id="inMedia" required></label>
+                            placeholder="Digite uma média" id="inMedia" required></label>
                     <input type="button" value="Buscar 🔍" id="btMostrar" class="button">
                     <h3 id="outMenorMedia" class="paragrafoSaida"></h3>
                 </div>
