Modifiquei a página de Novidades

--- a/novidades.html
+++ b/novidades.html
@@ -30,17 +30,20 @@
 
     <main>
         <section class="imagem-principal">
-            <img class="imagem-lavoura" src="./Imagens-Novidades/lavoura2.png" alt="Banner da página de Novidades">
+            <img class="imagem-lavoura" src="./Imagens-Novidades/lavoura.png" alt="Banner da página de Novidades">
             <h1 class="titulo-principal">Oportunidade de Emprego na Fazenda Recanto Grande </h1>
             <h2 class="titulo-secundario"> Venha Fazer Parte do Mundo do Café Especial! </h2>
         </section>
 
-        <section class="conteudoSite">
+        <section class="frase">
             <p>Se você é apaixonado por café e busca uma oportunidade de emprego que combine sua paixão com o desejo de
                 trabalhar em um ambiente inovador e sustentável, temos uma excelente notícia! Nossa fazenda de café está
                 em
                 busca de talentos dedicados e entusiastas para se juntarem à nossa equipe e fazerem parte do emocionante
                 mundo do café especial.</p>
+        </section>
+
+        <section class="conteudoSite">
             <hr>
             <h2>A Oportunidade:</h2>
             <br>
@@ -115,7 +118,9 @@
             <p>Estamos animados para conhecer profissionais dedicados e entusiasmados, prontos para abraçar a paixão
                 pelo
                 café e contribuir para a excelência de nossa fazenda. Junte-se a nós nessa emocionante jornada de café e
-                agricultura sustentável!</p>
+                agricultura sustentável!
+            </p>
+            <hr>
         </section>
 
         <section id="contato">
