--- a/producao.html
+++ b/producao.html
@@ -18,11 +18,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="#" onclick="mostrarConteudo(1)">Produção</a>
-                    <li><a href="#" onclick="mostrarConteudo(2)">Maior produtividade</a>
-                    <li><a href="#" onclick="mostrarConteudo(3)">Produção Média</a></li>
-                    <li><a href="#" onclick="mostrarConteudo(4)">Menor produtividade</a></li>
-                    <li><a href="#" onclick="mostrarConteudo(5)">Filtro</a>
+                    <li><a id="pagProducao" style="color: chocolate;" href="#" onclick="mostrarConteudo(1)">Produção</a>
+                    <li><a id="pagMaiorProd" href="#" onclick="mostrarConteudo(2)">Maior produtividade</a>
+                    <li><a id="pagMediaProd" href="#" onclick="mostrarConteudo(3)">Produção Média</a></li>
+                    <li><a id="pagMenorProd" href="#" onclick="mostrarConteudo(4)">Menor produtividade</a></li>
+                    <li><a id="pagFiltro" href="#" onclick="mostrarConteudo(5)">Filtro</a>
                 </ul>
             </nav>
     </header>
