--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="logo" src="./Imagens-Geral/logo.png">
       <nav>
         <ul>
-          <li><a href="index.html">Início</a></li>
+          <li><a style="color: chocolate;"  href="index.html">Início</a></li>
           <li><a href="producao.html">Produção</a></li>
           <li><a href="novidades.html">Novidades</a></li>
           <li><a
