terminei os comentarios

--- a/novidades.html
+++ b/novidades.html
@@ -12,27 +12,35 @@
 
 <body>
     <header>
+        <!-- Cabeçalho da página -->
         <div class="caixa">
+            <!-- Contêiner para agrupar elementos -->
             <img class="logo2" src="./Imagens-Geral/logo2.png">
             <nav>
+                <!-- Menu de navegação -->
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="producao.html">Produção</a></li>
                     <li><a style="color: chocolate;" href="novidades.html">Novidades</a></li>
-                    <li><a href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu" target="_blank" class="linkMapa"><img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></a></li>
+                    <li><a href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu" target="_blank" class="linkMapa">                            
+                        <!-- Item de menu com link externo para o mapa da fazenda, abrindo em uma nova aba -->
+                        <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main>
+        <!-- Seção principal do conteúdo da página -->
         <section class="imagem-principal">
+            <!-- Seção com uma imagem de banner e títulos principais -->
             <img class="imagem-lavoura" src="./Imagens-Novidades/lavoura.png" alt="Banner da página de Novidades">
             <h1 class="titulo-principal">Oportunidade de Emprego na Fazenda Recanto Grande </h1>
             <h2 class="titulo-secundario"> Venha Fazer Parte do Mundo do Café Especial! </h2>
         </section>
 
         <section class="frase">
+            <!-- Seção com uma frase descritiva -->
             <p>Se você é apaixonado por café e busca uma oportunidade de emprego que combine sua paixão com o desejo de
                 trabalhar em um ambiente inovador e sustentável, temos uma excelente notícia! Nossa fazenda de café está
                 em
@@ -41,6 +49,7 @@
         </section>
 
         <section class="conteudoSite">
+            <!-- Seção com o conteúdo principal da página -->
             <hr>
             <h2>A Oportunidade:</h2>
             <br>
@@ -48,6 +57,7 @@
                 processamento e comercialização do café. Valorizamos a diversidade e estamos em busca de pessoas com
                 diferentes habilidades e experiências para enriquecer ainda mais nosso time.</p>
             <br>
+            <!-- Primeira vaga de emprego -->
             <h3>1. Operador de Beneficiamento de Café:</h3>
             <br>
             <h4>Descrição da Vaga:</h4>
@@ -57,6 +67,7 @@
                 beneficiamento do café. Sua habilidade em manusear os equipamentos com precisão e atenção aos detalhes
                 será fundamental para garantir que nossos grãos sejam processados com a máxima qualidade.</p>
             <br>
+            <!-- Imagem relacionada à descrição da vaga -->
             <img src="Imagens-Novidades/maquina.png" class="imagem">
             <br>
             <h4>Requisitos:</h4>
@@ -70,6 +81,7 @@
                     trabalho.</li>
             </ul>
             <hr>
+            <!-- Segunda vaga de emprego -->
             <h3>2. Técnico em Agropecuária:</h3>
             <br>
             <h4>Descrição da Vaga:</h4>
@@ -82,6 +94,7 @@
                 será responsável por identificar e controlar pragas e doenças de forma sustentável e eficiente.</p>
 
             <br>
+            <!-- Imagem relacionada à descrição da vaga -->
             <img src="Imagens-Novidades/tecnica.jpeg" class="imagem">
             <br>
             <h4>Requisitos:</h4>
@@ -94,6 +107,7 @@
             </ul>
             <br>
             <h3>Benefícios:</h3>
+            <!-- Imagem relacionada à descrição da vaga -->
             <img src="Imagens-Novidades/imgBeneficios.png" class="imgBeneficios">
             <br>
             <ul>
@@ -120,17 +134,20 @@
             <hr>
         </section>
 
+        <!-- Seção de informações de contato -->
         <section id="contato">
-
             <div class="navbar">
                 <div class="box">
+                    <!-- Link para o perfil do Instagram -->
                     <a href="https://www.instagram.com/rafamorao20/">
                         <div class="icon icon-instagram"></div>
                     </a>
                     <p><a href="https://www.instagram.com/rafamorao20/">Instagram</a></p>
                 </div>
 
+                <!-- Caixa para ícone de rede social -->
                 <div class="box">
+                    <!-- Link para o WhatsApp -->
                     <a href="https://wa.me/27997800677">
                         <div class="icon icon-whatsapp"></div>
                     </a>
@@ -141,6 +158,7 @@
     </main>
 
     <footer>
+        <!-- Rodapé da página -->
         <img class="logo" src="./Imagens-Geral/logo.png">
         <p class="copyright">Copyright &copy; 2023 Fazenda Recanto Grande</p>
     </footer>
