Modifiquei a página inicial e a de novidades

--- a/index.html
+++ b/index.html
@@ -26,18 +26,15 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
 
   <header>
     <div class="caixa">
-      <img class="logo" src="./Imagens-Geral/logo.png">
+      <div><img class="logo" src="./Imagens-Geral/logo.png"></div>
+      
       <nav>
-        <ul>
-          <li><a style="color: chocolate;"  href="index.html">Início</a></li>
-          <li><a href="producao.html">Produção</a></li>
-          <li><a href="novidades.html">Novidades</a></li>
-          <li><a
-              href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu"
-              target="_blank">
-              <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa">
-            </a></li>
-        </ul>
+        <a style="color: chocolate;" href="index.html">Início</a>
+        <a href="producao.html">Produção</a>
+        <a href="novidades.html">Novidades</a>
+        <a href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu"
+          target="_blank">
+          <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></a>
       </nav>
     </div>
   </header>
@@ -61,6 +58,7 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
             cultivar, colher e processar café de alta qualidade para venda e distribuição. </p>
         </div>
 
+        <div class="imagemTexto">
         <div><img class="imagem-cafeComSol" src="./Imagens-Home/cafeComSol.jpg"
             alt="Imagem de Fazenda da página inicial"></div>
 
@@ -80,6 +78,7 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
             desenvolvimento
             para nossa equipe.</p>
         </div>
+      </div>
       </section>
 
       <section class="cafes">
@@ -133,8 +132,9 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
         </div>
       </section>
 
-      <section class="valores">
+      <section>
         <h3 class="titulo">sobre nós</h3>
+        <div class="valores">
         <p><strong>Missão:</strong><br>Nossa Missão é produzir café de qualidade excepcional em todas as etapas do
           processo, desde o cultivo até a xícara final. Buscamos a perfeição em termos de sabor, aroma, corpo e
           complexidade, garantindo uma experiência sensorial única para os amantes de café.</p>
@@ -145,6 +145,7 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
 
         <p><strong>Visão:</strong><br>Melhorar os nossos processos, técnicas e conhecimentos relacionados à produção de
           café. Tornanddo-se referência no Brasil e no mundo.</p>
+        </div>
       </section>
 
       <section class="galeria-imagens">
@@ -153,8 +154,8 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
         <div style="background-image: url('./Imagens-Home/cafe3.jpg');"></div>
         <div style="background-image: url('./Imagens-Home/cafe4.jpg');"></div>
         <div style="background-image: url('./Imagens-Home/cafe5.jpg');"></div>
-        <div style="background-image: url('./Imagens-Home/cafe6.jpg');"></div>
-        <div style="background-image: url('./Imagens-Home/cafe7.jpg');"></div>
+        <div style="background-image: url('./Imagens-Home/cafe6.jpg');" class="excluirImagem"></div>
+        <div style="background-image: url('./Imagens-Home/cafe7.jpg');" class="excluirImagem"></div>
       </section>
 
     </section>
@@ -164,7 +165,7 @@ Autores:Katiane Maciel do Nascimento, Rafael Capeletti Moráo e Nicolly Cerqueir
     <img class="logo" src="./Imagens-Geral/logo.png">
     <p class="copyright">Copyright &copy; 2023 Fazenda Recanto Grande</p>
   </footer>
-  
+
 </body>
 
 </html>
