--- a/novidades.html
+++ b/novidades.html
@@ -13,21 +13,18 @@
 <body>
     <header>
         <!-- Cabeçalho da página -->
-        <div class="caixa">
+
             <!-- Contêiner para agrupar elementos -->
             <img class="logo2" src="./Imagens-Geral/logo2.png">
             <nav>
-                <!-- Menu de navegação -->
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="producao.html">Produção</a></li>
-                    <li><a style="color: chocolate;" href="novidades.html">Novidades</a></li>
-                    <li><a href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu" target="_blank" class="linkMapa">                            
+                    <a href="index.html">Início</a>
+                    <a href="producao.html">Produção</a>
+                    <a style="color: chocolate;" href="novidades.html">Novidades</a>
+                   <a href="https://www.google.com/maps/place/Fazenda+Recanto+Grande/@-19.8035341,-40.6642376,3125m/data=!3m1!1e3!4m6!3m5!1s0xb777165bf7f009:0xdb6a44ea6c5d5f31!8m2!3d-19.8048468!4d-40.6596609!16s%2Fg%2F11krd2h4fv?hl=pt-BR&entry=ttu" target="_blank" class="linkMapa">                            
                         <!-- Item de menu com link externo para o mapa da fazenda, abrindo em uma nova aba -->
-                        <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></a></li>
-                </ul>
+                        <img src="./Imagens-Home/mapa-icone.png" class="iconeMapa"></a>
             </nav>
-        </div>
+  
     </header>
 
     <main>
